<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.itayagay.voicechampion.ui.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />


    <fragment
        android:id="@+id/nav_rules"
        android:name="com.itayagay.voicechampion.ui.RulesFragment"
        android:label="@string/menu_rules"
        tools:layout="@layout/fragment_rules" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.itayagay.voicechampion.ui.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />







</navigation>