<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/space1"
            android:enabled="false"
            android:title=""/>


        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home"/>
        <item
            android:id="@+id/space2"
            android:enabled="false"
            android:title=""/>
        <item
            android:id="@+id/space3"
            android:enabled="false"
            android:title=""/>
        <item
            android:id="@+id/nav_rules"
            android:icon="@drawable/ic_rules"
            android:title="@string/menu_rules" />
        <item
            android:id="@+id/space4"
            android:enabled="false"
            android:title=""/>
        <item
            android:id="@+id/space5"
            android:enabled="false"
            android:title=""/>
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/space6"
            android:enabled="false"
            android:title=""/>
    </group>

</menu>
