<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loadingGameDialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:layoutDirection="ltr">


    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gifImageView"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:scaleType="fitXY"
        android:src="@drawable/loading_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/contestantCircleImageView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/ic_profile"
        android:visibility="invisible"
        app:civ_border_color="@color/mainColor"
        app:civ_border_width="2dp"
        app:layout_constraintBottom_toTopOf="@+id/cancel_btn"
        app:layout_constraintEnd_toEndOf="@+id/gifImageView"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gifImageView"
        app:layout_constraintVertical_bias="0.20999998" />

    <TextView
        android:id="@+id/searchingForPlayersTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/searching_for_players"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/foundPlayerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/found_player"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/cancel_btn"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:background="@drawable/button_cancel"
        android:fontFamily="@font/asakim_bold"
        android:text="@string/cancel"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/gifImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>