<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/nav_header_bg"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">


    <TextView
        android:id="@+id/hNumOfCoinsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:fontFamily="@font/bernard"
        android:textAlignment="textEnd"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/userImageViewInGame"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/hCoinsImageView"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/coins"
        android:contentDescription="@string/todo"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/hNumOfCoinsTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/userNameDisplayTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="5dp"
        android:fontFamily="@font/adobe_garamond_pro_bold"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_header_title"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userImageViewInGame" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/userImageViewInGame"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="5dp"
        app:civ_border_color="@android:color/secondary_text_light_nodisable"
        app:civ_border_width="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/hWinsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/bernard"
        android:text="@string/wins"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/userImageViewInGame"
        app:layout_constraintTop_toBottomOf="@+id/hNumOfCoinsTextView" />

    <TextView
        android:id="@+id/hLossesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/bernard"
        android:text="@string/losses"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/userImageViewInGame"
        app:layout_constraintTop_toBottomOf="@+id/hWinsTextView" />

    <TextView
        android:id="@+id/hNumOfWinsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/bernard"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/hWinsTextView"
        app:layout_constraintTop_toBottomOf="@+id/hCoinsImageView" />

    <TextView
        android:id="@+id/hNumOfLossesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/bernard"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/hLossesTextView"
        app:layout_constraintTop_toBottomOf="@+id/hNumOfWinsTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>
