<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/game_over_bg"
    android:layoutDirection="ltr">

    <TextView
        android:id="@+id/userTextViewEndGame"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/bernard"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userImageViewEndGame" />

    <TextView
        android:id="@+id/contestantTextViewEndGame"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/bernard"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contestantImageViewEndGame" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/userImageViewEndGame"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="24dp"

        app:civ_border_color="@color/mainColor"
        app:civ_border_width="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userCrownImageView" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/contestantImageViewEndGame"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="24dp"
        app:civ_border_color="@color/mainColor"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contestantCircusImageView" />

    <TextView
        android:id="@+id/winnerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bernard"
        android:text="@string/won"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/returnToHomeBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        app:layout_constraintVertical_bias="0.6" />

    <TextView
        android:id="@+id/lostTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bernard"
        android:text="@string/lost"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/returnToHomeBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        app:layout_constraintVertical_bias="0.599" />

    <TextView
        android:id="@+id/drawTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bernard"
        android:text="@string/draw"
        android:textAllCaps="false"
        android:textColor="@color/mainColor"
        android:textSize="40sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/returnToHomeBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        app:layout_constraintVertical_bias="0.6" />

    <Button
        android:id="@+id/returnToHomeBtn"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/button_return_to_home"
        android:fontFamily="@font/asakim_bold"
        android:text="@string/return_to_home"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <ImageView
        android:id="@+id/userCrownImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="4dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        app:srcCompat="@drawable/ic_crown" />

    <ImageView
        android:id="@+id/userCircusImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="5dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        app:srcCompat="@drawable/ic_circus" />

    <ImageView
        android:id="@+id/contestantCircusImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="40dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        app:srcCompat="@drawable/ic_circus" />

    <ImageView
        android:id="@+id/contestantCrownImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="40dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        app:srcCompat="@drawable/ic_crown" />


</androidx.constraintlayout.widget.ConstraintLayout>