<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/game_page_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/game_page_bg"
    tools:context=".ui.GamePageFragment">

    <TextView
        android:id="@+id/hintTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/vast_shadow"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showHintTV"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/contestantImg1"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/todo"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/contestantImg2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contestantImageViewInGame"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/contestantImg3"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/todo"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/contestantImg4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contestantImg2"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/contestantImg4"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/todo"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/contestantImg5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contestantImg3"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/contestantImg5"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/todo"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/halfAnswerHelp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contestantImg4"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/contestantImg2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/todo"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/contestantImg3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contestantImg1"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/contestantNameTextView"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bernard"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/contestantImageViewInGame"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/coinsImageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/todo"
        app:layout_constraintStart_toEndOf="@+id/numOfCoinsTextViewInGame"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/coins" />

    <TextView
        android:id="@+id/numOfCoinsTextViewInGame"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/bernard"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toEndOf="@+id/leaveGameBtn"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabInGame"
        style="@style/Widget.MaterialComponents.FloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="@android:color/background_light"
        app:fabCustomSize="100dp"
        app:layout_anchorGravity="center|top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:maxImageSize="40dp"
        app:srcCompat="@drawable/ic_mic"
        app:useCompatPadding="false" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/userImageViewInGame"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="200dp"
        app:civ_border_color="@color/mainColor"
        app:civ_border_width="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/contestantImageViewInGame"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="200dp"
        app:civ_border_color="@color/mainColor"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/usernameTextView"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bernard"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/userImageViewInGame"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/firstLetterHelp"
        android:layout_width="180dp"
        android:layout_height="30dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/button_one_letter"
        android:fontFamily="@font/adobe_garamond_pro_bold"
        android:stateListAnimator="@null"
        android:text="@string/firstLetterOfAnswer"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/halfAnswerHelp"
        android:layout_width="180dp"
        android:layout_height="30dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/button_half_answer"
        android:fontFamily="@font/adobe_garamond_pro_bold"
        android:stateListAnimator="@null"
        android:text="@string/halfAnswer"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/secondsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bernard"
        android:text="@string/starting_time"
        android:textColor="@android:color/background_light"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/contestantImageViewInGame"
        app:layout_constraintStart_toEndOf="@+id/userImageViewInGame"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:layout_constraintVertical_bias="0.120000005" />

    <TextView
        android:id="@+id/questionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/vast_shadow"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.52" />

    <Button
        android:id="@+id/leaveGameBtn"
        android:layout_width="140dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_leave_game"
        android:fontFamily="@font/adobe_myungjo_std_m"
        android:text="@string/leave_game"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/userImg1"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/todo"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/userImg2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userImageViewInGame"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/userImg2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/todo"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/userImg3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userImg1"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/userImg3"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/todo"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/userImg4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userImg2"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/userImg4"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/todo"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/userImg5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userImg3"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/userImg5"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/todo"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/firstLetterHelp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userImg4"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/showHintTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/vast_shadow"
        android:text="@string/your_hint_is"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fabInGame"
        app:layout_constraintVertical_bias="0.20999998" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.62" />

    <ImageView
        android:id="@+id/inGameCoinsImageView1"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginEnd="30dp"
        android:contentDescription="TODO"
        android:src="@drawable/coins"
        app:layout_constraintBottom_toBottomOf="@+id/firstLetterHelp"
        app:layout_constraintEnd_toEndOf="@+id/firstLetterHelp"
        app:layout_constraintTop_toTopOf="@+id/firstLetterHelp" />

    <ImageView
        android:id="@+id/inGameCoinsImageView2"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginEnd="24dp"
        android:src="@drawable/coins"
        app:layout_constraintBottom_toBottomOf="@+id/halfAnswerHelp"
        app:layout_constraintEnd_toEndOf="@+id/halfAnswerHelp"
        app:layout_constraintTop_toTopOf="@+id/halfAnswerHelp" />

</androidx.constraintlayout.widget.ConstraintLayout>